<resources>
    <string name="app_name">Floating Labels</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_address">Address</string>
    <string name="hint_accountnumber">Account Number</string>
    <string name="hint_bankname">Bank Name</string>
    <string name="hint_branchname">Branch Name</string>
    <string name="hint_bankaddress">Bank Address</string>
    <string name="hint_ifsccode">IFSC Code</string>
    <string name="hint_accountholdername">Card Holder Name</string>
    <string name="hint_creditcardnumber">Credit Card Number</string>
    <string name="hint_creditcardtype">Credit Card Type</string>
    <string name="hint_creditcardcvvnumber">Credit Card Cvv Number</string>
    <string name="hint_creditcardpin">Credit Card Pin</string>
    <string name="hint_creditcardmonth">Month</string>
    <string name="hint_creditcardyear">Year</string>
    <string name="hint_debitcardnumber">Debit Card Number</string>
    <string name="hint_debiitcardtype">Debit Card Type</string>
    <string name="hint_debitcardcvvnumber">Debit Card Cvv Number</string>
    <string name="hint_debitcardmonth">Month</string>
    <string name="hint_debitcardyear">Year</string>
    <string name="hint_debitcardpin">Debit Card Pin</string>
    <string name="hint_InternetBankingUserName">Net Banking Username</string>
    <string name="hint_InternetBankingPassword">Net Banking Password</string>
    <string name="hint_InternetBankingTransactionPassword">Net Banking Transaction Password</string>
    <string name="btn_register">Register</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="hint_empty">Nil</string>


    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa.</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="downloaded">Downloaded</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>

    <string-array name="list_of_banks">
        <item>Allahabad Bank</item>
        <item>Andhra Bank</item>
        <item>Axis Bank</item>
        <item>Bank of Bahrain and Kuwait</item>
        <item>Bank of Baroda - Corporate Banking</item>
        <item>Bank of Baroda - Retail Banking</item>
        <item>Bank of India</item>
        <item>Bank of Maharashtra</item>
        <item>Canara Bank</item>
        <item>Central Bank of India</item>
        <item>City Union Bank</item>
        <item>Corporation Bank</item>
        <item>Deutsche Bank</item>
        <item>Development Credit Bank</item>
        <item>Dhanlaxmi Bank</item>
        <item>Federal Bank</item>
        <item>HDFC Bank</item>
        <item>ICICI Bank</item>
        <item>IDBI Bank</item>
        <item>Indian Bank</item>
        <item>Indian Overseas Bank</item>
        <item>IndusInd Bank</item>
        <item>ING Vysya Bank</item>
        <item>Jammu and Kashmir Bank</item>
        <item>Karnataka Bank Ltd</item>
        <item>Karur Vysya Bank</item>
        <item>Kotak Bank</item>
        <item>Laxmi Vilas Bank</item>
        <item>Oriental Bank of Commerce</item>
        <item>Punjab National Bank - Corporate Banking</item>
        <item>Punjab National Bank - Retail Banking</item>
        <item>Punjab &amp; Sind Bank</item>
        <item>Shamrao Vitthal Co-operative Bank</item>
        <item>South Indian Bank</item>
        <item>State Bank of Bikaner &amp; Jaipur</item>
        <item>State Bank of Hyderabad</item>
        <item>State Bank of India</item>
        <item>State Bank of Mysore</item>
        <item>State Bank of Patiala</item>
        <item>State Bank of Travancore</item>
        <item>Syndicate Bank</item>
        <item>Tamilnad Mercantile Bank Ltd</item>
        <item>UCO Bank</item>
        <item>Union Bank of India</item>
        <item>United Bank of India</item>
        <item>Vijaya Bank</item>
        <item>Yes Bank Ltd</item>
    </string-array>
</resources>
